--- a/login.html
+++ b/login.html
@@ -34,13 +34,18 @@
     </div>
     <div class="bottom">
         <p class="login">Zaloguj się</p>
-        <div class="data">
+        <a href="home.html">Przejdź do Home</a>.html" method="get">
+            <button type="submit">Przejdź do Home</button>
             <img class="logo_other" style="height: 20px;" src="assets/images/COI.png">
             <img class="logo_other" src="assets/images/mc.svg">
+            <p class="version">wersja 4.52.0 (13)</p>mg class="logo_other" style="height: 20px;" src="assets/images/COI.png">
+            <img class="logo_other" src="assets/images/mc.svg">div>
             <p class="version">wersja 4.52.0 (13)</p>
-        </div>
-    </div>
+        </div>pt>
+    <script src="assets/manifest.js"></script>iv>
     <script src="assets/login.js?v=1.1"></script>
-    <script src="assets/manifest.js"></script>
-</body>
-</html>
+    <script src="assets/manifest.js"></script></html>
+
+
+
+</html></body>
